// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Form/Button with knobs 1`] = `
.emotion-2 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  display: inline;
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

<div
  class="emotion-2 emotion-3"
>
  <button
    class="emotion-0 emotion-1"
  >
    💌  love letter to storybook team
  </button>
</div>
`;

exports[`Storyshots Components|Form/Textarea with knobs (controlled) 1`] = `
.emotion-2 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

<div
  class="emotion-2 emotion-3"
>
  <textarea
    class="emotion-0 emotion-1"
    style="height:0"
  >
    OMG, multiple lines!

That is amazing
  </textarea>
</div>
`;
